--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ But one day, when he turned eighty years old, an incredible thing happened. Inst
 <tr>
 <td></td>
 <td>
-<button type="button">Submit</button>
-<button type="button">Reset</button>
+<a href="#"><button>Submit</button></a>
+<a href="#"><button>Reset</button></a>
 </td>
 </tr>
 </table>
