--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -40,7 +40,7 @@
         <tr>
             <td><button><b>.</b></button></td>
             <td><button>0</button></td>
-            <td><button>00</button></td>
+            <td><button>←</button></td>
             <td><button>=</button></td>
         </tr>
     </table>
